// Vitest Snapshot v1

exports[`formatBodyToRawResult > should fetch google api and pick up translate used array 1`] = `
[
  [
    "Nǐ hǎo",
    null,
    "zh-CN",
    [
      [
        [
          0,
          [
            [
              [
                null,
                2,
              ],
            ],
            [
              true,
            ],
          ],
        ],
      ],
      2,
    ],
    null,
    null,
    [
      "你好",
      "auto",
      "en",
      true,
    ],
  ],
  [
    [
      [
        null,
        null,
        null,
        null,
        null,
        [
          [
            "Hello",
            null,
            null,
            null,
            null,
            null,
            "你好",
            4,
          ],
        ],
        null,
        null,
        null,
        [],
      ],
    ],
    "en",
    1,
    "zh-CN",
    [
      "你好",
      "auto",
      "en",
      true,
    ],
  ],
  "zh-CN",
  [
    "你好!",
    null,
    null,
    null,
    null,
    [
      [
        [
          null,
          [
            [
              "Hello!",
              null,
              [
                "你好!",
                "喂!",
              ],
              1,
              true,
            ],
            [
              "Hi!",
              null,
              [
                "嗨!",
                "你好!",
              ],
              1,
              true,
            ],
            [
              "Hallo!",
              null,
              [
                "你好!",
              ],
              3,
              true,
            ],
          ],
          "en",
          "zh-CN",
          9,
        ],
      ],
      3,
    ],
    "Nǐ hǎo",
    null,
    "zh-CN",
    1,
  ],
]
`;

exports[`formatBodyToRawResult > should get translate data with confusing punctuation 1`] = `
[
  [
    "Zhè,... Shì,.. Shén. Me????12123123",
    null,
    "zh-CN",
    [
      [
        [
          0,
          [
            [
              [
                null,
                16,
              ],
            ],
            [
              true,
            ],
          ],
        ],
        [
          1,
          [
            [
              [
                null,
                16,
              ],
              [
                16,
                24,
              ],
            ],
            [
              false,
              true,
            ],
          ],
        ],
      ],
      24,
    ],
    null,
    null,
    [
      "这,...是,..什.么???？12123123",
      "auto",
      "en",
      true,
    ],
  ],
  [
    [
      [
        null,
        null,
        null,
        null,
        null,
        [
          [
            "What's this????",
            null,
            null,
            null,
            null,
            null,
            "这,...是,..什.么???？",
            4,
          ],
          [
            "12123123",
            null,
            true,
            null,
            null,
            null,
            "12123123",
            5,
          ],
        ],
        "zh-CN",
        null,
        null,
        [],
      ],
    ],
    "en",
    1,
    "zh-CN",
    [
      "这,...是,..什.么???？12123123",
      "auto",
      "en",
      true,
    ],
  ],
  "zh-CN",
]
`;

exports[`formatBodyToRawResult > should get translate data with long sentences 1`] = `
[
  [
    "Chuáng qián míngyuèguāng, yí shì dìshàng shuāng. Jǔ tóu wàng míng yuè, dītóu sī gùxiāng.",
    null,
    "zh-CN",
    [
      [
        [
          0,
          [
            [
              [
                null,
                12,
              ],
            ],
            [
              true,
            ],
          ],
        ],
        [
          1,
          [
            [
              [
                null,
                12,
              ],
              [
                12,
                24,
              ],
            ],
            [
              false,
              true,
            ],
          ],
        ],
      ],
      24,
    ],
    null,
    null,
    [
      "床前明月光，疑是地上霜。举头望明月，低头思故乡。",
      "auto",
      "en",
      true,
    ],
  ],
  [
    [
      [
        null,
        null,
        null,
        null,
        null,
        [
          [
            "The moonlight in front of the bed is suspected to be on the ground.",
            null,
            null,
            null,
            null,
            null,
            "床前明月光，疑是地上霜。",
            5,
          ],
          [
            "Looking at the Mingyue, he bowed his head to his hometown.",
            null,
            true,
            null,
            null,
            null,
            "举头望明月，低头思故乡。",
            5,
          ],
        ],
        null,
        null,
        null,
        [],
      ],
    ],
    "en",
    1,
    "zh-CN",
    [
      "床前明月光，疑是地上霜。举头望明月，低头思故乡。",
      "auto",
      "en",
      true,
    ],
  ],
  "zh-CN",
]
`;

exports[`formatBodyToRawResult > should get translate data with punctuation 1`] = `
[
  [
    "Jīntiān, wǒ kàn dào yīgè chéngxù yuán!",
    null,
    "zh-CN",
    [
      [
        [
          0,
          [
            [
              [
                null,
                12,
              ],
            ],
            [
              true,
            ],
          ],
        ],
      ],
      12,
    ],
    null,
    null,
    [
      "今天，我看到一个程序员！",
      "auto",
      "en",
      true,
    ],
  ],
  [
    [
      [
        null,
        null,
        null,
        null,
        null,
        [
          [
            "Today, I see a programmer!",
            null,
            null,
            null,
            null,
            null,
            "今天，我看到一个程序员！",
            5,
          ],
        ],
        null,
        null,
        null,
        [],
      ],
    ],
    "en",
    1,
    "zh-CN",
    [
      "今天，我看到一个程序员！",
      "auto",
      "en",
      true,
    ],
  ],
  "zh-CN",
]
`;

exports[`formatBodyToRawResult > should get translate data with punctuation 2`] = `
[
  [
    "Jīntiān, wǒ kàn dào yīgè chéngxù yuán!",
    null,
    "zh-CN",
    [
      [
        [
          0,
          [
            [
              [
                null,
                12,
              ],
            ],
            [
              true,
            ],
          ],
        ],
      ],
      12,
    ],
    [
      [
        "今天，我看到一个程序员！",
        null,
        null,
        12,
      ],
    ],
  ],
  [
    [
      [
        null,
        null,
        null,
        null,
        null,
        [
          [
            "Today, I see a programmer!",
            null,
            null,
            null,
            [
              [
                "Today, I see a programmer!",
                [
                  5,
                ],
              ],
              [
                "Today, I saw a programmer!",
                [
                  11,
                ],
              ],
            ],
          ],
        ],
      ],
    ],
    "en",
    1,
    "zh-CN",
    [
      "今天，我看到一个程序员！",
      "auto",
      "en",
      true,
    ],
  ],
  "zh-CN",
]
`;

exports[`formatBodyToRawResult > should get translate data with space 1`] = `
[
  [
    null,
    null,
    "zh-CN",
    null,
    null,
    null,
    [
      " ",
      "auto",
      "en",
      true,
    ],
  ],
  [
    [
      [
        null,
        null,
        null,
        null,
        null,
        [
          [
            null,
            null,
            null,
            null,
            null,
            null,
            " ",
          ],
        ],
        null,
        null,
        null,
        [],
      ],
    ],
    "en",
    1,
    "zh-CN",
    [
      " ",
      "auto",
      "en",
      true,
    ],
  ],
  "zh-CN",
]
`;

exports[`formatBodyToRawResult > should get translate data without char 1`] = `null`;
